fix(modal): prevent body content overflow

--- a/src/components/ai/sourcesFeedback/aiSourcesFeedback.scss
+++ b/src/components/ai/sourcesFeedback/aiSourcesFeedback.scss
@@ -4,7 +4,6 @@
 .action-bar {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 1rem;
 }
 
 .left-div,
@@ -38,6 +37,7 @@
   border: 1px solid var(--kd-color-border-variants-light);
   border-radius: 8px;
   padding: 16px;
+  margin-top: 1rem;
 }
 .opened.kyn-sources-body {
   display: block;
@@ -45,6 +45,7 @@
   background: var(--kd-color-background-container-ai-default);
   border-radius: 8px;
   padding: 16px;
+  margin-top: 1rem;
 }
 
 .expand-icon {
